# NSL-3130AA-ROS2

./: .gitignore  README.md  requirements.txt  setup_dds_interface.bash
NSL3130_driver/src/roboscan_nsl3130/: CMakeLists.txt  lidar_params.yaml  lidar_params_calibration.yaml  package.xml
NSL3130_driver/src/roboscan_nsl3130/include/: roboscan_publish_node.hpp
NSL3130_driver/src/roboscan_nsl3130/launch/: camera.launch.py  extrinsic_calib.launch.py  intrinsic_calib.launch.py  multi_viewer.launch.py  multiview.launch.py  multiview_calib.launch.py
NSL3130_driver/src/roboscan_nsl3130/rviz/: multi_sensor.rviz  roboscan_nsl3130rviz.rviz
NSL3130_driver/src/roboscan_nsl3130/scripts/: cloud_snapshot_node.py  extrinsic_calibration_node.py  extrinsic_tf_node.py  gen_multiview_rviz_layout.py  multiview_bundle_node.py  multiview_calib_node.py  multiview_put_server.py  multiview_solver_node.py  multiview_tf_node.py  rgb_compressor_node.py
NSL3130_driver/src/roboscan_nsl3130/src/: roboscan_publish_node.cpp
calib_output/N0078060D/: camera_info.yaml  extrinsic.yml  params.yaml
calib_output/N0078060D/extrinsic/: 2D_corners.csv  3D_corners.csv
calib_output/N0078060D/extrinsic/pointclouds/: 00.pcd  01.pcd  02.pcd  03.pcd  04.pcd  05.pcd
calib_output/N008B060D/: params.yaml
calib_output/N00A5060D/: camera_info.yaml  extrinsic.yml  intrinsic.yml  params.yaml
calib_output/N00A5060D/extrinsic/: 2D_corners.csv  3D_corners.csv
calib_output/N00A5060D/extrinsic/pointclouds/: 03.pcd  04.pcd  05.pcd  06.pcd
calib_output/N00AD05C1/: multiview.yml  params.yaml
calib_output/N010005C4/: camera_info.yaml  extrinsic.yml  params.yaml
calib_output/N010005C4/extrinsic/: 2D_corners.csv  3D_corners.csv
calib_output/N010005C4/extrinsic/pointclouds/: 00.pcd  01.pcd  02.pcd  03.pcd  04.pcd  05.pcd  06.pcd
docs/: multiview_tf_solver.md
setup/: check_fleet_rates.bash  extrinsic_calib.sh  fleet_tools.sh  install_libusb_linux.sh  install_libusb_macos.sh  intrinsic_calib.sh  nsl-edge-agent.service  run_edge_agent.bash  setup_dds_interface.bash  setup_fleet_edge.bash
