<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboscan_nsl3130</name>
  <version>0.0.0</version>
  <description>nanosystems ROBOSCAN package</description>
  <maintainer email="info@nanosys.kr">nanosys</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_service</depend>     
  <depend>boost</depend>
  <depend>libpcl-conversions-dev</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <!-- multiview_put_server / multiview_bundle_node reuse ros_humanpose's PutWeight srv -->
  <exec_depend>ros_humanpose</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>



  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
